The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

* Add IS_MONITORINGCTL check

### Changed

* fork evocheck for Debian 9 (Stretch)
* duke support (Debian 15)
* HARDWARERAIDTOOL: Add perccli and perccli2 support

### Fixed

### Deprecated

### Removed

## [25.01] 2025-01-23

### Changed

* LDAP_BACKUP_PATH: Improve detection of ldap.bak
* POSTGRES_BACKUP_PATH: Improve detection of pg.dump.bak
* SQL_BACKUP_PATH: Improve backup detection for mariadb
* IS_LXC_*: force lxc-ls to display one container per line

### Fixed

* IS_LXC_CONTAINER_RESOLV_CONF: Fix match in host
* IS_KERNELUPTODATE: Address false positive in case of kernel removal (jessie and wheezy)

## [24.09.2] 2024-09-24

### Fixed

* IS_TMP_1777: check permissions in LXC only if /tmp exists

## [24.09.1] 2024-09-24

### Added

* IS_TMP_1777: check LXC containers too

### Changed

* Apply pattern of checking the real LXC rootfs
* minifirewall: RELATED is optional
* Use long options for grep

### Fixed

* Use correct grep option (`--regexp` instead of `--pattern`)

## [24.09] 2024-09-06

### Changed

* Merge CONTRIBUTING files in README
* Move LICENSE file at the root of the repo
* IS_LXC_PHP_BAD_DEBIAN_VERSION: Trixie support
* IS_PHPEVOLINUXCONF: Trixie support
* IS_SSHALLOWUSERS: Trixie support

### Removed

* IS_EVOLIX_GROUP: too many false positive

### Fixed

* IS_LXC_PHP_FPM_SERVICE_UMASK_SET: suffixed container name support

## [24.08] 2024-08-01

### Fixed

* VERSION variable must contain valid characters only

## [24.07] 2024-07-18

### Added

* IS_EVOLIX_GROUP: new check to verify that all Evolix users are in "evolix" group

### Changed

* IS_SYSLOGCONF: modern and legacy tests
* IS_MYSQLNRPE: ajust check for monitoringctl new nagios conf

### Deprecated

### Removed

### Fixed
