@@ -5,6 +5,7 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Added
 
+* Add IS_LXC_OPENSMTPD check
 * Add IS_MONITORINGCTL check
 
 ### Changed
